@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+
+use Test::More;
+
+use_ok('Log2Timeline');
+
+done_testing();
